@@ -21,12 +21,12 @@
         <ul class="repo">
           <li class="repo-download">
             {% set version = config.extra.version | default('master') %}
-            <a href="{{ repo_url }}/archive/{{ version }}.zip" target="_blank" title="Download {{ repo_id }} from GitHub" data-action="download">
+            <a href="{{ repo_url }}/archive/{{ version }}.zip" target="_blank" title="Download {{ site_name }} from GitHub" data-action="download">
               <i class="icon icon-download"></i> Download
             </a>
           </li>
           <li class="repo-stars">
-            <a href="{{ repo_url }}" target="_blank" title="Star {{ repo_id }} on GitHub" data-action="star">
+            <a href="{{ repo_url }}" target="_blank" title="Star {{ site_name }} on GitHub" data-action="star">
               <i class="icon icon-star"></i> Star
               <span class="count">&ndash;</span>
             </a>
